--- a/csv-reader-with-one-to-many-mapping/src/main/resources/application.properties
+++ b/csv-reader-with-one-to-many-mapping/src/main/resources/application.properties
@@ -1,3 +1,13 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.output.ansi.enabled=ALWAYS
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+
+spring.jpa.hibernate.ddl-auto=create
+
+logging.level.org.hibernate.sql=debug
+logging.level.org.hibernate.trace=trace
