--- a/csv-reader-with-one-to-many-mapping/pom.xml
+++ b/csv-reader-with-one-to-many-mapping/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>17</java.version>
         <opencsv.version>5.6</opencsv.version>
+        <mapstruct.version>1.4.2.Final</mapstruct.version>
     </properties>
 
     <dependencies>
